<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="24dp">

    <ImageView
        android:id="@+id/btn_back_cuatrimestre"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/corporativo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back_cuatrimestre"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_cuatrimestre_1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F1F3F5"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cuatrimestre_1"
                    android:textColor="#0C3E69"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_cuatrimestre_2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F1F3F5"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cuatrimestre_2"
                    android:textColor="#0C3E69"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_cuatrimestre_3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F1F3F5"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cuatrimestre_3"
                    android:textColor="#0C3E69"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>